added click button

--- a/StartingJS.html
+++ b/StartingJS.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Js Basics</title>
+    <style>
+        button{
+            background-color: transparent;
+            border: 1px solid navy;
+            font-size: 1.4rem;
+        }
+        button:hover{
+            background-color: navy;
+            border: none;
+            color: wheat;
+        }
+    </style>
 </head>
 <body>
-    
+    <button>click me</button>
 </body>
 </html>
