--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
         </li>
     </ol>
     <p>
-        Site created by Sivasankar
+        Click the button below to generate a ramdom number
     </p>
+    <button>click here</button>
+    <script src="indexScript.js"></script>
 </body>
 </html>
