--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <p>
         Click the button below to generate a ramdom number
     </p>
-    <button>click here</button>
+    <button id="btn-1" class="number generator">click here</button>
     <script src="indexScript.js"></script>
 </body>
 </html>
