function to chnage list item content

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
             List item 3
         </li>
     </ol>
+    <button id="list-item">click here to change content of the list items</button>
+    
     <p>
         Click the button below to generate a ramdom number
     </p>
